test/extended/util/compat_otp/testdata/router/ingress-with-class.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-with-class
spec:
  ingressClassName: mytest
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          service:
            name: service-unsecure
            port:
              number: 27017
        path: /test
        pathType: ImplementationSpecific
